# sadhana

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile
.devcontainer/: Dockerfile  devcontainer.json
agents/: backend-dev.md  frontend-dev.md  orchestrator.md  pr.md  reviewer.md  static-site-dev.md
common/src/: error.rs
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: auth.spec.ts
frontend/: Cargo.toml  index.html  service_worker.js
frontend/i18n/: en.json  ru.json  ua.json
frontend/src/: main.rs
frontend/src/components/: background.rs  blank_page.rs  calendar.rs  chart.rs  draggable_list.rs  errors_banner.rs  footer.rs  header_button.rs  list_errors.rs  loading_overlay.rs  mod.rs  month_calendar.rs
frontend/src/context/: data_refresh_ctx.rs  errors_ctx.rs  layout_ctx.rs  loading_ctx.rs  mod.rs  session_state_cxt.rs  user_cxt.rs
server/src/: main.rs
ui/: Cargo.toml  Trunk.toml  index.html
ui/locales/en/: auth.ftl  common.ftl  errors.ftl
ui/locales/ru/: auth.ftl  common.ftl  errors.ftl
ui/locales/uk/: auth.ftl  common.ftl
ui/src/: main.rs
ui/src/components/: background.rs  errors.rs  footer.rs  header.rs  i18n_provider.rs  loading_context.rs  loading_overlay.rs  mod.rs  protected_routes.rs
ui/src/layouts/: mobile_layout.rs  mod.rs
ui/src/model/: auth.rs
ui/src/pages/: charts.rs  home.rs  mod.rs
ui/src/pages/auth/: confirmation.rs  login.rs  mod.rs  pwd_reset.rs  register.rs
ui/src/routes/: charts.rs  home.rs
ui/src/routes/auth/: login.rs
ui/src/services/: auth.rs  requests.rs
(+54 files in other folders)
